tests/baselines/reference/destructuringCatch.errors.txt
tests/cases/conformance/es6/destructuring/destructuringCatch.ts(4,9): error TS7031: Binding element 'a' implicitly has an '任意' type.
tests/cases/conformance/es6/destructuring/destructuringCatch.ts(4,12): error TS7031: Binding element 'b' implicitly has an '任意' type.
tests/cases/conformance/es6/destructuring/destructuringCatch.ts(11,9): error TS7031: Binding element 'a' implicitly has an '任意' type.
tests/cases/conformance/es6/destructuring/destructuringCatch.ts(11,12): error TS7031: Binding element 'b' implicitly has an '任意' type.
tests/cases/conformance/es6/destructuring/destructuringCatch.ts(18,14): error TS7031: Binding element 'y' implicitly has an '任意' type.
tests/cases/conformance/es6/destructuring/destructuringCatch.ts(18,18): error TS7031: Binding element 'z' implicitly has an '任意' type.
tests/cases/conformance/es6/destructuring/destructuringCatch.ts(25,37): error TS7031: Binding element 'a' implicitly has an '任意' type.


==== tests/cases/conformance/es6/destructuring/destructuringCatch.ts (7 errors) ====
    try {
        throw [0, 1];
    }
    catch ([a, b]) {
            ~
!!! error TS7031: Binding element 'a' implicitly has an '任意' type.
               ~
!!! error TS7031: Binding element 'b' implicitly has an '任意' type.
        a + b;
    }
    
    try {
        throw { a: 0, b: 1 };
    }
    catch ({a, b}) {
            ~
!!! error TS7031: Binding element 'a' implicitly has an '任意' type.
               ~
!!! error TS7031: Binding element 'b' implicitly has an '任意' type.
        a + b;
    }
    
    try {
        throw [{ x: [0], z: 1 }];
    }
    catch ([{x: [y], z}]) {
                 ~
!!! error TS7031: Binding element 'y' implicitly has an '任意' type.
                     ~
!!! error TS7031: Binding element 'z' implicitly has an '任意' type.
        y + z;
    }
    
    // Test of comment ranges. A fix to GH#11755 should update this.
    try {
    }
    catch (/*Test comment ranges*/[/*a*/a]) {
                                        ~
!!! error TS7031: Binding element 'a' implicitly has an '任意' type.
    
    }
    